# card_game

./: .gitignore  CMakeLists.txt  README.md  card_game.md  use_cases.txt
include/card_game/: Action.h  BotPlayer.h  BotStrategy.h  Card.h  Deck.h  GameEvent.h  GameServer.h  GameSession.h  HumanPlayer.h  IPlayer.h
src/: Action.cpp  BotPlayer.cpp  BotStrategy.cpp  Card.cpp  Deck.cpp  GameEvent.cpp  GameServer.cpp  GameSession.cpp  HumanPlayer.cpp  main.cpp
src/client/: client.cpp
src/common/: command.cpp  command.h  common.h  message.cpp  message.h
src/server/: accept_handler.cpp  accept_handler.h  command.cpp  command.h  game_room.cpp  game_room.h  game_server.cpp  game_server.h  lobby_handler.cpp  lobby_handler.h  pipe_wrapper.h  player_manager.cpp  player_manager.h  room_manager.cpp  room_manager.h  server.cpp
src/server/actor/: actor.cpp  actor.h  bot.h  player.h  strategy.cpp  strategy.h
src/server/commands/: command.cpp  command.h  create.cpp  create.h  finish.h  join.cpp  join.h  list.cpp  list.h  start.h
src/server/commands/game/: add.h  game_command.h
src/server/durak/: card.cpp  card.h  deck.cpp  deck.h  durak.cpp  durak.h  hand.h
src/test/: test_basic.cpp  test_card.cpp  test_deck.cpp  test_durak.cpp
src2/server/: server.cpp
test/: test_action.cpp  test_card.cpp  test_deck.cpp  test_game_server.cpp  test_game_session.cpp  test_player.cpp
